*Sidebar *Default language *Header

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -158,5 +158,7 @@
   "Coming Simple": "Coming Simple",
   "Coming with Bg Image": "Coming with Bg Image",
   "Coming with Bg video": "Coming with Bg video",
-  "Maintenance": "Maintenance"
+  "Maintenance": "Maintenance",
+  "Patients": "Patients",
+  "Appointments": "Appointments"
 }
