* Some progress: layout, listings, dashboard.

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -160,5 +160,42 @@
   "Coming with Bg video": "Coming with Bg video",
   "Maintenance": "Maintenance",
   "Patients": "Patients",
-  "Appointments": "Appointments"
+  "Appointments": "Appointments",
+  "Login": "Login",
+  "User": "User",
+  "Username": "Username",
+  "Password": "Password",
+  "RememberMe": "Remember me",
+  "LoginCredentialsMessage": "Enter your Username and Password",
+  "Settings": "Settings",
+  "Doctors": "Doctors",
+  "Receptionist": "Receptionist",
+  "Visits": "Visits",
+  "Agenda": "Agenda",
+  "Today": "Today",
+  "Tomorrow": "Tomorrow",
+  "Yesterday": "Yesterday",
+  "Monthly": "Monthly",
+  "Weekly": "Weekly",
+  "ThisMonth": "This month",
+  "ThisWeek": "This week",
+  "January": "January",
+  "February": "February",
+  "March": "March",
+  "April": "April",
+  "May": "May",
+  "June": "June",
+  "July": "July",
+  "August": "August",
+  "September": "September",
+  "October": "October",
+  "November": "November",
+  "December": "December",
+  "AppointmentsAvailable": "Appointments Available",
+  "Notes": "Notes",
+  "CrossOutAll": "Cross out all",
+  "Secretaries": "Secretaries",
+  "DoctorList": "List of Doctors",
+  "PatientList": "List of Patients",
+  "SecretaryList": "List of Secretaries"
 }
