--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -160,5 +160,42 @@
     "Coming with Bg video": "Viniendo con Bg video",
     "Maintenance": "Mantenimiento",
     "Patients": "Pacientes",
-    "Appointments": "Turnos"
+    "Appointments": "Turnos",
+    "Login": "Ingresar",
+    "User": "Usuario",
+    "Username": "Nombre de Usuario",
+    "Password": "Contraseña",
+    "RememberMe": "Recordarme",
+    "LoginCredentialsMessage": "Ingrese su Usuario y Contraseña",
+    "Settings": "Configuración",
+    "Doctors": "Doctores",
+    "Receptionist": "Recepcionistas",
+    "Visits": "Visitas",
+    "Agenda": "Agenda",
+    "Today": "Hoy",
+    "Tomorrow": "Mañana",
+    "Yesterday": "Ayer",
+    "Monthly": "Mensual",
+    "Weekly": "Semanal",
+    "ThisMonth": "Este mes",
+    "ThisWeek": "Esta semana",
+    "January": "Enero",
+    "February": "Febrero",
+    "March": "Marzo",
+    "April": "Abril",
+    "May": "Mayo",
+    "June": "Junio",
+    "July": "Julio",
+    "August": "Agosto",
+    "September": "Septiembre",
+    "October": "Octubre",
+    "November": "Noviembre",
+    "December": "Diciembre",
+    "AppointmentsAvailable": "Turnos disponibles",
+    "Notes": "Notas",
+    "CrossOutAll": "Tachar todas",
+    "Secretaries": "Secretarias",
+    "DoctorList": "Listado de Doctores",
+    "PatientList": "Listado de Pacientes",
+    "SecretaryList": "Listado de Secretarias"
 }
