--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -58,13 +58,12 @@
     "Themify Icon": "Icono de Themify",
     "Feather Icon": "Icono de pluma",
     "Whether Icon": "Si icono",
-    "Buttons": "Botones",
     "Default Style": "Estilo por Defecto",
     "Flat Style": "Estilo plano",
     "Edge Style": "Estilo de borde",
     "Raised Style": "Estilo elevado",
     "Button Group": "Grupo de botones",
-    "Forms": "Formas",
+    "Forms": "Formularios",
     "Form Controls": "Controles de formulario",
     "Form Validation": "Validación de formularios",
     "Base Inputs": "Entradas base",
@@ -75,12 +74,11 @@
     "Ngx Wizard": "Ngx Wizard",
     "Tables": "Mesas",
     "Bootstrap Tables": "Mesas de Bootstrap",
-    "Basic Table": "Tabla basica",
+    "Basic Table": "Tabla básica",
     "Sizing Table": "Tabla de tallas",
     "Border Table": "Tabla de borde",
     "Styling Table": "Mesa de peluquería",
     "Ngx-Datatables": "Ngx-Datatable",
-    "Basic Table": "Tabla basica",
     "Editing Table": "Mesa de edición",
     "Filter Table": "Tabla de filtro",
     "Fullscreen Table": "Tabla de pantalla completa",
@@ -197,5 +195,15 @@
     "Secretaries": "Secretarias",
     "DoctorList": "Listado de Doctores",
     "PatientList": "Listado de Pacientes",
-    "SecretaryList": "Listado de Secretarias"
+    "SecretaryList": "Listado de Secretarias",
+    "Reports": "Reportes",
+    "General": "General",
+    "Graphics": "Gráficos",
+    "Graphics1": "Gráficos 1",
+    "Graphics2": "Gráficos 2",
+    "Graphics3": "Gráficos 3",
+    "Various": "Varios",
+    "New": "Nuevo",
+    "Prescriptions": "Recetas",
+    "Templates": "Plantillas"
 }
